--- a/haskset.cabal
+++ b/haskset.cabal
@@ -16,9 +16,9 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable haskset
-  main-is:             Main.hs
+  main-is:             Setserve.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.7 && <4.8, text, bytestring, persistent-sqlite, monad-logger, mtl,  time, shakespeare, yesod-core, yesod-auth, yesod-auth-account, yesod, yesod-websockets, transformers, random, random-shuffle, stm
+  build-depends:       base >=4.7 && <4.8, text, bytestring, persistent-sqlite, monad-logger, mtl,  time, shakespeare, yesod-core, yesod-auth, yesod-auth-account, yesod, yesod-websockets, transformers, stm, random-fu
   -- hs-source-dirs:      
   default-language:    Haskell2010
