--- a/haskset.cabal
+++ b/haskset.cabal
@@ -19,6 +19,6 @@ executable haskset
   main-is:             Setserve.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.7 && <4.8, text, bytestring, persistent-sqlite, monad-logger, mtl,  time, shakespeare, yesod-core, yesod-auth, yesod-auth-account, yesod, yesod-websockets, transformers, stm, random-fu, conduit-combinators
+  build-depends:       base >=4.7 && <4.8, text, bytestring, persistent-sqlite, monad-logger, mtl,  time, shakespeare, yesod-core, yesod-auth, yesod-auth-account, yesod, yesod-websockets, transformers, stm, random-fu, conduit-combinators, random-shuffle, random
   -- hs-source-dirs:      
   default-language:    Haskell2010
